--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
 
     <div class="tech">
       <h2>Language</h2>
-      <i class="devicon-go-plain colored"></i>
+      <i class="devicon-go-plain"></i>
       <i class="devicon-python-plain colored"></i>
       <i class="devicon-swift-plain-wordmark colored"></i>
       <i class="devicon-cplusplus-plain-wordmark colored"></i>
