--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,29 +1,31 @@
 <div class="user-details">
-  <h1> Featured Projects </h1>
+    <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
-  </div>
+    <div class="images-left">
+        <img alt="roostoo" src="{{ "/assets/img/roostoo.jpg" | prepend: site.baseurl }}" />
+    </div>
+    <div class="contents-right">
+        <h3> Roostoo </h3>
+
+        <p>Roostoo is a lifelike mock crypto trading simulator that allows practicing trading at no cost with real-time
+            market data.We, a team of 3 core members, built and released the app on Android and iOS. The app was also on
+            Product Hunt hunted by the #1 Product Hunter Chris Messina. Please try it out and leave us feedbacks！
+            This is an on-going project. More features are coming soon.</p>
+        <a class="project-link" href="https://www.roostoo.com">Check it out</a>
+    </div>
 </div>
 <div class="user-projects">
-  <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents-right">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
-  </div>
+    <div class="images-left">
+        <img alt="roostoo" src="{{ "/assets/img/roostoo.jpg" | prepend: site.baseurl }}" />
+    </div>
+    <div class="contents-right">
+        <h3> Roostoo </h3>
+
+        <p>Roostoo is a lifelike mock crypto trading simulator that allows practicing trading at no cost with real-time
+            market data.We, a team of 3 core members, built and released the app on Android and iOS. The app was also on
+            Product Hunt hunted by the #1 Product Hunter Chris Messina. Please try it out and leave us feedbacks！
+            This is an on-going project. More features are coming soon.</p>
+        <a class="project-link" href="https://www.roostoo.com">Check it out</a>
+    </div>
 </div>
