--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -5,18 +5,21 @@ body {
     padding: 0;
     font-size: 100%;
     line-height: 1.5;
-    color: #555;
+    color:white;
     font-family: 'Montserrat', sans-serif;
+    background-color: black;
 }
 article, aside, figcaption, figure, footer, header, nav, section {
     display: block;
 }
+
 h1, h2, h3, h4, stong {
     margin-top: 1em;
     padding-top: 1em;
     line-height: 1.25;
-    color: #333;
+    color:white;
 }
+
 h1 {
     font-size: 2.5rem;
 }
