--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -21,7 +21,6 @@
     margin: 0;
   }
   li {
-    color: $main;
     font-size: 1.1rem;
   }
   p {
@@ -71,7 +70,7 @@
   display: inline-block;
   margin: 10px 0px;
   padding: 5px;
-  color: $main;
+  color: yellowgreen;
   background-color: transparent;
   border: 1px solid $main;
   border-radius: 10px;
