fix: dev: detail

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,25 +10,32 @@
       <i class="devicon-python-plain colored"></i>
       <i class="devicon-swift-plain-wordmark colored"></i>
       <i class="devicon-cplusplus-plain-wordmark colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
+      <br>
+      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-html5-plain-wordmark colored"></i>
+      <i class="devicon-java-plain-wordmark colored"></i>
+      
+      <li>I like Golang very much & I have made some awesome backend system with it.</li>
+      <li>Python is one of my favorite language</li>
+      <li>C++ is the first language I have learned during undergraduate</li>
+      <li>I have built two APPs with Swift&SwiftUI for project in USC</li>
+      <li>For front-end, I have experience with Bootstrap/React/JQuery</li>
+      <li>I can write but I hate Java(Since I knew how golang works)</li>
 
-    <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-docker-plain-wordmark colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
     </div>
 
     <div class="tech">
       <h2>Tools</h2>
+      <i class="devicon-docker-plain-wordmark colored"></i>
+      <i class="devicon-postgresql-plain-wordmark colored"></i>
+      <i class="devicon-linux-plain"></i>
       <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <br>
+      <i class="devicon-nodejs-plain-wordmark"></i>
+      <i class="devicon-nginx-original-wordmark colored"></i>
+      <i class="devicon-react-original-wordmark colored"></i>
+      <li>I have some projects that use docker/docker-compose/k8s</li>
+      <li>Postgresql is my favorite database, I use it for almost every my projects.</li>
+      <li>I'm good at linux, especially Debian/Ubuntu, Centos</li>
     </div>
 </div>
