--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -18,8 +18,9 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  p {
+  p, li {
     font-size: 16px;
+    text-align: left;
   }
   @media only screen and (min-width: $cut) {
     flex-wrap: nowrap;
