fix: dev: detail

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -34,8 +34,10 @@
       <i class="devicon-nodejs-plain-wordmark"></i>
       <i class="devicon-nginx-original-wordmark colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
+      <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
       <li>I have some projects that use docker/docker-compose/k8s</li>
       <li>Postgresql is my favorite database, I use it for almost every my projects.</li>
       <li>I'm good at linux, especially Debian/Ubuntu, Centos</li>
+      <li>I'm familiar with AWS. I'm using EC2 / ELB(Load balancer) / RDS / S3 / DynamicCache(Redis) / Cloudfront(CDN) /Global Accelerator for my projects</li>
     </div>
 </div>
