--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,20 +7,81 @@
     </div>
     <div class="contents-right">
         <h3> Roostoo </h3>
-
-        <p>Roostoo is a lifelike mock crypto trading simulator that allows practicing trading at no cost with real-time
-            market data.We, a team of 3 core members, built and released the app on Android and iOS. The app was also on
-            Product Hunt hunted by the #1 Product Hunter Chris Messina. Please try it out and leave us feedbacks！
-            This is an on-going project. More features are coming soon.</p>
+        <p><a href="https://www.roostoo.com">Roostoo</a> is a lifelike mock crypto trading simulator that allows
+            practicing trading at no cost with real-time market data.</p>
+        <p>We, a team of 3 core members, built and released the app on <a
+                href="https://play.google.com/store/apps/details?id=com.roostoo.roostoo">Android</a>
+            and <a href="https://apps.apple.com/us/app/roostoo-mock-crypto-trading/id1483561353">iOS</a>. The app was
+            also on <a href="https://www.producthunt.com/posts/roostoo-2">Product Hunt</a> hunted by the #1 Product
+            Hunter <a href="https://chrismessina.me/">Chris Messina</a>. Please try it out and <a
+                href="mailto:contact@roostoo.com">leave us feedbacks</a>！</p>
         <a class="project-link" href="https://www.roostoo.com">Check it out</a>
     </div>
 </div>
 <div class="user-projects">
     <div class="images-left">
-        <img alt="roostoo" src="{{ "/assets/img/roostoo.jpg" | prepend: site.baseurl }}" />
+        <img alt="arbitrage" src="{{ "/assets/img/arbitrage.jpeg" | prepend: site.baseurl }}" />
     </div>
     <div class="contents-right">
-        <h3> Roostoo </h3>
+        <h3> ArbitrageBot </h3>
+        <p>
+            This is an exchanges arbitrage bot I have built and runned since 4 years ago.
+        </p>
+        <p>
+            It's an Event-Driven system. Gethering major crypto-exchanges ticker and depth data though websocket. 
+            Once update received, push it to arbitrage system to calculate and execute orders at microsecond-level.
+        </p>
+        <p>
+            It runs full automaticly. I don't need pay any time on it.
+        </p>
+    </div>
+</div>
+<div class="user-projects">
+    <div class="images-left">
+        <img alt="roostoo" src="{{ "/assets/img/news.jpg" | prepend: site.baseurl }}" />
+    </div>
+    <div class="contents-right">
+        <h3> NewsEngine </h3>
+
+        <p>NewsEngine is a personal project of CSCI-571 course in USC. It was built with React / Bootstrap / Nodejs.</p>
+        <p>This site's data come from NYTimes and Guardian public API. </p>
+        <p>It supports responsive view, search / comment / bookmark.</p>
+        <a class="project-link" href="http://news.jolly23.com">Check it out</a>
+    </div>
+</div>
+<div class="user-projects">
+    <div class="images-left">
+        <img alt="roostoo" src="{{ "/assets/img/gre3000.jpg" | prepend: site.baseurl }}" />
+    </div>
+    <div class="contents-right">
+        <h3> GRE3000 </h3>
+
+        <p>GRE3000 was an idea which pops up when I was learning English and preparing exams before I came to the U.S.</p>
+        <p>It was inconvenient when you have to carry a thick book and trying to remember every word in the book. Thus I built this site above a simple BBS.</p>
+        <p>It's based on Golang web frame BEEGO, hosted inside 4 docker-containers with http load balancer on AWS.</p>
+        <p>Code is open-sourced, it was my show off project(Finished and added tons of tech I know until 2017). It was really helped me go through that period.</p>
+        <a class="project-link" href="https://gre.jolly23.com">Go to Website </a>
+        <a class="project-link" href="https://github.com/Jolly23/GRE3000">Source Code</a>
+    </div>
+</div>
+<div class="user-projects">
+    <div class="images-left">
+        <img alt="roostoo" src="{{ "/assets/img/bet365.png" | prepend: site.baseurl }}" />
+    </div>
+    <div class="contents-right">
+        <h3> Sport Gambling Arbitrage Bot </h3>
+
+        <p>During my internship in HongKong Sage Capital Holdsing Ltd. My work is to build a crawler for BET365. I solved the BET365 core websocket data format issue (security purpose). </p>
+        <p>This made the team successfully crawling bet365 real-time odds data. The whole system is event-driven. Calculating odds for same market from different booker, based on Kelly formula to place bet.</p>
+        
+    </div>
+</div>
+<!-- <div class="user-projects">
+    <div class="images-left">
+        <img alt="roostoo" src="{{ "/assets/img/bet365.png" | prepend: site.baseurl }}" />
+    </div>
+    <div class="contents-right">
+        <h3> XiaoSi student assistant </h3>
 
         <p>Roostoo is a lifelike mock crypto trading simulator that allows practicing trading at no cost with real-time
             market data.We, a team of 3 core members, built and released the app on Android and iOS. The app was also on
@@ -28,4 +89,4 @@
             This is an on-going project. More features are coming soon.</p>
         <a class="project-link" href="https://www.roostoo.com">Check it out</a>
     </div>
-</div>
+</div> -->
