--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -1,34 +1,38 @@
 #about {
-  width: 90%;
-  margin: 0 auto;
-  max-width: 960px;
-  @media only screen and (min-width: $cut) {
-    width: 80%;
-  }
+    width: 90%;
+    margin: 0 auto;
+    max-width: 960px;
+    @media only screen and (min-width: $cut) {
+        width: 80%;
+    }
 }
 
 .tech {
-  margin: 10px;
+    @media only screen and (min-width: $cut) {
+        width: 50%;
+    }
+    margin: 10px;
 }
 
 .user {
-  text-align: center;
-  font-size: 60px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  p, li {
-    font-size: 16px;
-    text-align: left;
-  }
-  @media only screen and (min-width: $cut) {
-    flex-wrap: nowrap;
-    font-size: 75px;
-  }
+    text-align: center;
+    font-size: 60px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    p,
+    li {
+        font-size: 16px;
+        text-align: left;
+    }
+    @media only screen and (min-width: $cut) {
+        flex-wrap: nowrap;
+        font-size: 75px;
+    }
 }
 
 .user-details {
-  text-align: center;
-  margin: 5px auto;
+    text-align: center;
+    margin: 5px auto;
 }
